--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
+  "name": "basketcounter",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0",
     "parcel": "^2.12.0",
@@ -10,12 +18,5 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  },
-  "name": "renderfunction",
-  "description": "",
-  "version": "1.0.0",
-  "main": "script.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  }
 }
